--- a/lab6.html
+++ b/lab6.html
@@ -5,10 +5,19 @@
     <link rel="stylesheet" href="Css/style.css" />
   </head>
   <body>
+    <header>
     <h1>CAR
 
     </h1>
+    <nav>
+        <ul>
+            <li> <a href="https://en.wikipedia.org/wiki/Car">Cars</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Car">about us</a></li>
+            <li><a href="https://login.yahoo.com">contact</a></li>
 
+        </ul>
+    </nav>
+    </header>
 <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to display Date and Time. </button>
