--- a/lab6.html
+++ b/lab6.html
@@ -19,7 +19,7 @@
     </nav>
    </header>
 <button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
+onclick="document.getElementById('car').innerHTML = Date()">
 Click me to display Date and Time. </button>
 
 <p>We All love the car</p>
