--- a/lab6.html
+++ b/lab6.html
@@ -18,22 +18,20 @@
         </ul>
     </nav>
    </header>
-<button type="button"
-onclick="document.getElementById('car').innerHTML = Date()">
+<button type="button" 
+onclick="document.getElementById('We all love cars').innerHTML = Date()">
 Click me to display Date and Time. </button>
 
-<p>We All love the car</p>
+<p id="We all love cars"> </p>
 
 <main>
-  
+
+  <script src="watch.js"></script>
+  <script src="car.js"></script>
 
   <article>
     <section>
-      <img src="car.jpg" alt="car">
-    </section>
-    <section>
-      <h2>Best CAR in the world
-      </h2>
+      <h2>Best CAR in the world</h2>
       <p>In this century, all the people have at least one car. It's one of the most thing that we need to it in our life. Without it we feel something miss in our life.
 
       </p>
@@ -42,8 +40,7 @@ Click me to display Date and Time. </button>
 
 </main>
 
-<script src="js/watch.js"></script>
-  <script src="js/car.js"></script>
+
   
   
 <footer>
@@ -52,4 +49,4 @@ Click me to display Date and Time. </button>
   
 </body>
 
-</html>
+</html> 
